Fixed navbar interfaring with underlying components on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -287,6 +287,7 @@ header {
     align-items: center;
     justify-content: space-between;
 
+
     
 
     nav {
@@ -446,15 +447,13 @@ header {
             display: block;
             position: fixed;
             background-color: $clr-text-light;
-
-            // visibility: 0;
             opacity: 0;
-            z-index: 0;
-    
-            top: 5rem;
+            
+            
+            top: -90%;
             left: 0;
             right: 0;
-            bottom: 0;
+
     
             padding-inline: calc($body-padding / 2);
     
@@ -507,12 +506,12 @@ header {
                 top: 7.9rem;
             }
         }
-        // position: relative;
 
         &:has(input[type="checkbox"]:checked) {
             nav {
                 opacity: 1;
-                z-index: 1;
+                top: 5rem;
+                bottom: 0
             }
         }
     }
